--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -17,3 +17,10 @@
   float:right;
   margin-top:-71px;
 }
+
+@media only screen and (max-width : 600px){
+  .bb-btn-back {
+    float:right;
+    margin-top:-40px;
+  }
+}
