--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -25,6 +25,15 @@
   margin-left: 10px;
 }
 
+.verses-wrapper {
+  background-color: #efefef;
+}
+
+.verses-wrapper .col {
+  margin-bottom: 15px;
+  background-color: white;
+}
+
 
 @media only screen and (max-width : 600px){
   .action-wrapper {
