--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -1,5 +1,12 @@
+$black: #000;
+$white: #fff;
+
 .container {
   width: 100%;
+}
+
+.theme .sub-title {
+  color: #9e9e9e;
 }
 
 .book, .chapter, .verse {
@@ -31,9 +38,40 @@
 
 .verses-wrapper .col {
   margin-bottom: 15px;
-  background-color: white;
+  background-color: $white;
 }
 
+/* Themes */
+
+.theme.dark {
+  background-color: $black;
+  color: #bbb;
+}
+
+.theme.dark .verses-wrapper .col {
+  background-color: $black;
+}
+
+.theme.papyrus {
+  background: url(../images/papyrus.gif);
+  color: maroon;
+}
+
+.theme.papyrus .sub-title {
+  color: IndianRed;
+}
+
+.theme.papyrus .verses-wrapper {
+  background-color: maroon;
+}
+
+.theme.papyrus .verses-wrapper .col {
+  background: url(../images/papyrus.gif);
+}
+
+.theme.papyrus .verses-wrapper .col .verse sup {
+  color: #777;
+}
 
 @media only screen and (max-width : 600px){
   .action-wrapper {
